# python-project-lvl2

./: .travis.yml  Makefile  README.md  pyproject.toml
gendiff/: __init__.py  cli.py  engine.py  generate_diff.py
gendiff/formatters/: __init__.py  default.py  json.py  plain.py  standart.py  to_json.py
gendiff/parsers/: __init__.py  cli.py  files.py  json.py  json_and_yaml.py  yaml.py
gendiff/scripts/: gendiff.py
tests/: advanced_json_test.py  advanced_plain_json_test.py  advanced_yaml_test.py  first_test.py  json_test.py  result_to_json_test.py  wrong_file_extension_test.py  yaml_test.py
tests/fixtures/: advanced_after.json  advanced_before.yml  advanced_file_result.txt  advanced_file_result_json.json  advanced_file_result_plain.txt  first_result.txt
