[tool.poetry]
name = "topolun_gendiff"
version = "0.1.0"
description = "Check for diiferences in 2 files"
authors = ["Topolun <vik83tu@yandex.ru>"]
packages = [  { include = "gendiff" }, ]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
